Added JUnit test to debug the implementation of the session-scoped BookingState object.  Also separated BookingState bean defintion from ticketmonster-business-context.xml so that unit tests could be run using a mock BookingState object.